# BasicSockets

./: .gitignore  BasicSockets.c  BasicSockets.h  CMakeLists.txt  Platform.h  README.md
MyUnix/: Backend.c
MyWindows/: Backend.c
Utilities/: CMakeLists.txt  strings.c  strings.h
